--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,6 +1,6 @@
 .navbar {
   height: 70px;
-  background-color: rgb(0, 89, 100);
+  background-color: #0777ff
 }
 
 .logo {
@@ -19,4 +19,7 @@
 .logo span {
   font-size: 1.2rem;
   font-weight: 700;
+}
+.text{
+  color: white;
 }
